@@ -9,16 +9,14 @@ import java.util.HashSet;
 import java.util.Set;
 
 /**
- * Created by IntelliJ IDEA.
- * User: mtutaj
- * Date: 1/28/15
- * Time: 2:57 PM
+ * @author mtutaj
+ * @since 1/28/15
  */
 public class FileGuard {
 
     private Date time0; // time when the processing started
     private String dirName; // name of dir to guard
-    private String ontId; // f.e. RDO, CHEBI
+    private String ontId; // f.e. DOID, CHEBI
     private Set<String> originalAccIds;
 
     void init(String dirName, String ontId) {
@@ -37,7 +35,7 @@ public class FileGuard {
         File dir = new File(dirName);
         for( File file: dir.listFiles() ) {
             String fileName = file.getName();
-            if( fileName.startsWith(ontId) && fileName.endsWith("Chr1.gff3.gz")) {
+            if( fileName.startsWith(ontId) && fileName.endsWith("gff3.gz")) {
                 int pos = fileName.indexOf("_Ontology");
                 if( pos>0 ) {
                     String accId = fileName.substring(0, pos);
@@ -67,7 +65,7 @@ public class FileGuard {
 
             String mailServer = "localhost";
             String mailFrom = "rgddata@"+hostname;
-            String[] recipients = {"mtutaj@mcw.edu","jrsmith@mcw.edu","amohaimani@mcw.edu"};
+            String[] recipients = {"mtutaj@mcw.edu","jrsmith@mcw.edu"};
             String title = "["+hostname.toUpperCase()+"] JBROWSE "+ontId+" TRACKS WARNING for map_key="+mapKey;
             Utils.sendMail(mailServer, mailFrom, recipients, title, msg);
         }
@@ -77,7 +75,7 @@ public class FileGuard {
         Set<String> accIds = new HashSet<String>();
         File dir = new File(dirName);
         for( String fileName: dir.list() ) {
-            if( fileName.startsWith(ontId) && fileName.endsWith("Chr1.gff3.gz") ) {
+            if( fileName.startsWith(ontId) && fileName.endsWith("gff3.gz") ) {
                 int pos = fileName.indexOf("_Ontology");
                 if( pos>0 )
                     accIds.add(fileName.substring(0, pos));
